--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,6 @@ TELEGRAM_BOT_API=6547723054:AAEnQYEByG-RSo0_rQUCNsFk4MBeHuk-yME
 # this bot is https://t.me/for_test_only_8413310117_bot
 TELEGRAM_CHAT_ID_AVAILABLE=
 # seperated with comma, e.g. 233,344
+TELEGRAM_ADMIN_USER_ID=
+# for emergent shutdown and restart
 OPENAI_API_KEY=sk-yyy
